# task_time_tracker

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  spelling_wordlist.txt  usage.rst
src/task_time_tracker/: __init__.py  check_windows_locked.py  cli.py
tests/: __init__.py  test_task_time_tracker.py
