[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "task_time_tracker"
dynamic = ["version"]
# version = "0.1.0"
description = "Track the time spent on various tasks through the day."
readme = "README.rst"
authors = [
  {name = "Steven Barnes", email = "gadgetsteve@hotmail.com"}
]
maintainers = [
  {name = "Steven Barnes", email = "gadgetsteve@hotmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "wxPython", # GUI Framework
]

[project.optional-dependencies]
dev = [
    "pre-commit",  # Apply pre-commit rules
    "coverage",  # testing
    "mypy",  # linting
    "pylint",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "black", # formatting
    "pyenchant", # spelling
    "sphinx", # documentation
    "sphinxcontrib-spelling", # spelling in rst
    "wheel",  # Building wheels
    "setuptools_scm".  # Versioning
    "zipp>=3.20",  # Backport of pathlib-compatible object wrapper for zip files
]

[project.urls]

bugs = "https://github.com/GadgetSteve/task_time_tracker/issues"
changelog = "https://github.com/GadgetSteve/task_time_tracker/blob/master/changelog.md"
homepage = "https://github.com/GadgetSteve/task_time_tracker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools_scm]



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

