[build-system]
requires = ["setuptools>=70.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "task_time_tracker"
dynamic = ["version"]
# version = "0.1.0"
description = "Track the time spent on various tasks through the day."
readme = "README.rst"
authors = [
  {name = "Steven Barnes", email = "gadgetsteve@hotmail.com"}
]
maintainers = [
  {name = "Steven Barnes", email = "gadgetsteve@hotmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "wxPython", # GUI Framework
]

[project.optional-dependencies]
dev = [
    "pre-commit=>4.0.1",  # Apply pre-commit rules
    "coverage>=7.6.4",  # testing
    "mypy>=1.13.0",  # linting
    "pylint>=3.3.1",  # linting
    "pytest>=6.2.4",  # testing
    "ruff>=0.3.5",  # linting
    "black>=24.3", # formatting
    "pyenchant>=3.2.2", # spelling
    "Sphinx>=7.2.6", # documentation
    "sphinxcontrib-spelling>=8.0.0", # spelling in rst
    "urllib3>=2.2.2",  # Web Access
    "requests=>2.32.3",  # Web Access
    "wheel>=0.33.6",  # Building wheels
    "zipp>=3.20",  # Backport of pathlib-compatible object wrapper for zip files
]

[project.urls]

bugs = "https://github.com/GadgetSteve/task_time_tracker/issues"
changelog = "https://github.com/GadgetSteve/task_time_tracker/blob/master/changelog.md"
homepage = "https://github.com/GadgetSteve/task_time_tracker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools_scm]



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
